@@ -1,5 +1,7 @@
 2014-03-04  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding programmatic access to final histograms via AnalysisHandler::getData().
+
 	* Adding CMS 4 jet correlations analysis, CMS_2013_I1273574.
 
 	* Adding CMS W + 2 jet double parton scattering analysis, CMS_2013_I1272853.
